# dsharpy

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README.rst  build.py  publish_docker_image.sh  pyproject.toml  test  update.sh
.github/workflows/: docker.yaml
dsharpy/: cli.py  convert.py  counter.py  data_structures.pyx  formula.py  loop_tree.py  preprocess.py  recursion_graph.py  stat_helpers.py  stats.py  tools.py  util.py
dsharpy/maxcount/: maxcount.py  selfcomposition.py
tests/: test_convert.py  test_data_structures.py  test_dsharpy.py  test_flow.py  test_formula.py  test_loop_tree.py  test_recursion_graph.py  test_tools.py  test_util.py  util.py
tests/cases/: test0.cnf  test1.cnf  test11.cnf  test1b.cnf  test1b_indies.cnf  test2.cnf  test3.cnf  test4.cnf  test5.cnf
tests/cases/large/: Simple.cnf  Simple2.cnf
tests/cases/max/: reverse.cnf  reverse_small.cnf
tools/: approxmc  build  install_approxmc
util/: approxmc4
