[tool.poetry]
name = "dsharpy"
version = "0.1.0"
description = "A small tool"
authors = ["Johannes Bechberger <johannes.bechberger@kit.edu>"]
packages = [{ include = "dsharpy" }]

[tool.poetry.dependencies]
python = "^3.8"
python-sat = "^0.1.6-alpha.11"
click = "^7.1.2"
prettyprinter = "^0.18.0"
scipy = "^1.5.4"
pytest-clarity = "^0.3.0-alpha.0"
pytest-check = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-clarity = "0.3.0a"
pytest-check = "^1.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dsharpy = "dsharpy.cli:cli"

[pytest]
log_cli = 1